--- a/hugo.toml
+++ b/hugo.toml
@@ -11,6 +11,8 @@ theme        = "hello-friend-ng"
   dateformNum     = "2006-01-02"
   dateformNumTime = "2006-01-02 15:04"
 
+  customCSS = ["css/custom.css"]
+
   homeSubtitle = "Researcher • Linguist • Human being"
 
   disableReadOtherPosts = false
