Update about page and push all changes

--- a/hugo.toml
+++ b/hugo.toml
@@ -23,6 +23,8 @@ theme        = "hello-friend-ng"
 
   customCSS = ["css/custom.css"]
 
+  enableThemeToggle = true 
+
 [params.favicon]
   # Path relative to /static
   logo = "favicon.ico"
