Update about page and push all changes

--- a/hugo.toml
+++ b/hugo.toml
@@ -11,7 +11,7 @@ theme        = "hello-friend-ng"
   dateformNum     = "2006-01-02"
   dateformNumTime = "2006-01-02 15:04"
 
-  homeSubtitle = "Researcher • Linguist • Human being"
+  homeSubtitle = "Sociolinguist • Researcher • Human being"
 
   disableReadOtherPosts = false
   enableSharingButtons  = true
